[package]
name = "rustaman"
version = "0.2.0"
authors = ["Guillaume Gauvrit <guillaume@gauvr.it>"]
edition = "2021"
readme = "README.md"
keywords = ["http", "https", "request", "client", "GUI"]
categories = ["web-programming::http-client", "GUI"]
description = """Template based http client using GTK."""
license = "BSD-3-Clause"
repository = "https://github.com/mardiros/rustaman"

[[bin]]
name = "rustaman"
path = "src/main.rs"


[dependencies]

clap = { version = "4.4.18", features = ["derive"] }
dirs-next = "2.0.0"
gtk = { version = "0.6", package = "gtk4" }
log = "0.4.20"
pretty_env_logger = "0.5.0"
relm4 = "0.6.2"
serde = "1.0.196"
serde_derive = "1.0.196"
serde_json = "1.0.113"
serde_yaml = "0.9.31"
url = "2.2.0"
