[package]
name = "rustaman"
version = "0.2.5"
authors = ["Guillaume Gauvrit <guillaume@gauvr.it>"]
edition = "2021"
readme = "README.md"
keywords = ["http", "https", "request", "client", "GUI"]
categories = ["web-programming::http-client", "GUI"]
description = """Template based http client using GTK."""
license = "BSD-3-Clause"
repository = "https://github.com/mardiros/rustaman"

[[bin]]
name = "rustaman"
path = "src/main.rs"


[dependencies]

clap = { version = "4.5.26", features = ["derive"] }
dirs-next = "2.0.0"
handlebars = "6.3.0"
lazy_static = "1.5.0"
log = "0.4.22"
pretty_env_logger = "0.5.0"
regex = "1.11.1"
relm4 = "0.9.1"
relm4-components = "0.9.1"
relm4-icons = { version = "0.9.0" }
relm4-macros = "0.9.1"
reqwest = { version="0.12.12" , features = ["blocking"] }
serde = "1.0.217"
serde_derive = "1.0.217"
serde_json = "1.0.135"
serde_yaml = "0.9.31"
sourceview5 = "0.9.1"
sourceview5-sys = "0.9.0"
url = "2.5.4"

[dependencies.adw]
package = "libadwaita"
version = "0.7.0"
